# glTF-Python-IO

./: .gitignore  pyproject.toml
addons/io_scene_gltf2/: __init__.py
gltf_python_io/com/: gltf2_io.py
gltf_python_io/imp/: gltf2_io_gltf.py
